--- a/documents/resume/ethang-glover-sum.tex
+++ b/documents/resume/ethang-glover-sum.tex
@@ -54,7 +54,7 @@
 		\item Multiple contracts working with many different stacks. Primarily React as a frontend, and many backend technologies such as Node, .NET, Java and PHP.
 		\item With St. Louis County, introduced automated testing to legacy codebases by setting up and writing unit tests for .NET backends as well as E2E and accessibility testing for React frontends. The major challenge with introducing tests to legacy codebases is that test runners sometimes expect the best practices that they enforce. This was causing many very difficult to reproduce bugs. This means getting tests set up would require significant refactoring, even entire rewrites. This is why we pivoted to a focus on E2E as much as possible.
 		\item At Proagrica, I worked with a highly dynamic farming dashboard for an international audience. Made use of Redux to manage complex state interactions and used time travel debugging to discover existing state, debug, and build new features.
-		\item With the EPA, I helped rebuild Emissions Collection and Monitoring System (ECMPS) for reporting emission data with a new tech stack. We made an effort to always increase test coverage. The result was QA asking for us to slow down because our production was too fast and not revealing issues. This gave us time to produce more reproducible examples and help QA to ensure the highest quality.
+		\item With the EPA, I helped rebuild Emissions Collection and Monitoring System (ECMPS) for reporting emission data with NodeJS and NestJS. We made an effort to always increase test coverage. The result was QA asking for us to slow down because our production was too fast and not revealing issues. This gave us time to produce more reproducible examples and help QA to ensure the highest quality.
 		\item Tech Used: .NET, Apache Velocity, Apollo, AWS, AWS Lambda, Bootstrap, C\#/.NET, Docker, Entity Framework, ESLint, GitHub, GitLab, GraphQL, HTML/CSS, i18next, Java, JavaScript, Jest, Jira, Laravel, MediatR, Moq, NestJS, NextJS, NodeJS, NX, PHP, Playwright, Prisma, React, React Testing Library, ReactPDF, Redux, Rust, Sitecore, Spring Boot, SQL, Stencil, StoryBook, Subversion (SVN), Tailwind, Twilio, TypeGraphQL, TypeORM, TypeScript, United States Web Design System (USWDS), Vue, WebAssembly, WebRTC, WebSockets, XUnit, Yii, Zod
 		\item Methodologies Used: Accessibility, Agile, Composable Design, Crab Testing, Dependency Injection, Monorepo, MVC, On-Prem Hosting, REST, SEO, TDD
 	\end{itemize}
